# project-1

./: BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  Lexer.cpp  Lexer.h  LineCommentAutomaton.h  MatcherAutomaton.h  StringAutomaton.h  Token.cpp  Token.h  lab1  main.cpp
input/: test.txt
lab1.dSYM/Contents/Resources/DWARF/: lab1
